Updated JVM flags